--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -1,6 +1,6 @@
 {% extends 'blog/base.html'%}
 
-{% block body_block%}
+{% block content %}
 <div class="jumbotron">
   <h2>Please Login:</h2>
   <h3>(Must be SuperUser, please check with site admin)</h3>
