--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -7,6 +7,11 @@ font-family: 'Montserrat', sans-serif; */
   margin-bottom:10px;
 }
 
+.centerstage{
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .bigbrand{
   font-size: 1.5em
 }
