--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -1,4 +1,5 @@
-{% extends  'base.html'%}
-{% block body_block %}
-<h1>About this site</h1>
+{% extends  'blog/base.html'%}
+{% block content %}
+<h1>About this company</h1>
+<p>Thanks for checking this out</p>
 {% endblock %}
