--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -13,8 +13,25 @@ font-family: 'Montserrat', sans-serif; */
 }
 
 .bigbrand{
-  font-size: 1.5em
+  font-size: 1.5em;
 }
+
+.postdate{
+  text-align: center;
+}
+
+.posttittle{
+  font-family: 'Russo One', sans-serif;
+  font-size: 1.5em;
+}
+
+.postcontent{
+  font-family: 'Montserrat';
+  font-size: 1.5em;
+}
+
+/* COLOR CHANGER */
+
 
 .loader {
   position:fixed;
