--- a/blog/templates/blog/comment_form.html
+++ b/blog/templates/blog/comment_form.html
@@ -1,4 +1,13 @@
 {% extends  'blog/base.html'%}
 {% block content %}
+<h1>Nre Comment</h1>
+<form class="post-form" method="post">
+  {% csrf_token %}
+  {{form.as_p}}
+  <button type="submit" class="save btn-default">Post Comment</button>
+</form>
 
+<script type="text/javascript">
+  var editor = new MediumEditor('.editable');
+</script>
 {% endblock %}
