Fixed some bugs

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,12 +3,14 @@
 <div class="centerstage">
   {% for post in post_list %}
   <div class="post">
-    <h1><a href="{% url 'post_detail' pk=post.pk %}">{{post.title}}</a></h1>
+    <h1><a href="{% url 'blog:post_detail' pk=post.pk %}">{{post.title}}</a></h1>
       <div class="date">
-        <p>Published on: {{post.published|date:"D M Y"}}</p>
+        <p>Published on: {{post.published_date|date:"D M Y"}}</p>
       </div>
-      <a href="{% url 'post_detail' pk=post.pk %}">Comments: {{post.approve_comments.count}}</a>
+      <a href="{% url 'blog:post_detail' pk=post.pk %}">Comments: {{post.approve_comments.count}}</a>
   </div>
+  {% empty %}
+  <h1>No posts!</h1>
   {% endfor %}
 </div>
 {% endblock %}
