--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -30,6 +30,11 @@ font-family: 'Montserrat', sans-serif; */
   font-size: 1.5em;
 }
 
+.btn-comment{
+  position: absolute;
+  right: 0px;
+}
+
 /* COLOR CHANGER */
 
 
