--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -5,9 +5,6 @@
     <meta charset="utf-8">
     <title>Blog</title>
     <<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    <!-- medium style editor -->
-    <script src="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/js/medium-editor.min.js"></script>
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
     <!-- custom css -->
     <link rel="stylesheet" href="{% static 'css/blog.css'%}">
     <!-- fonts -->
@@ -18,20 +15,20 @@
     <nav class="navbar navbar-default techfont custom-navbar">
       <div class="container">
         <ul class='nav navbar-nav'>
-          <li><a class='navbar-brand bigbrand' href="{% url 'post_list' %}"></a></li>
-          <li><a href="{% url 'about' %}">About</a></li>
+          <li><a class='navbar-brand bigbrand' href="{% url 'blog:post_list' %}">My Blog</a></li>
+          <li><a href="{% url 'blog:about' %}">About</a></li>
           <li><a href="https://www.github.com">Github</a></li>
           <li><a href="https://www.linkedin.com">LinkedIn</a></li>
         </ul>
 
         <ul class='nav navbar-nav navbar-right'>
             {% if user.is_authenticated %}
-            <li><a href="{% url 'post_new' %}">New Post</a></li>
-            <li><a href="{% url 'post_draft_list' %}">Drafts</a></li>
+            <li><a href="{% url 'blog:post_new' %}">New Post</a></li>
+            <li><a href="{% url 'blog:post_draft_list' %}">Drafts</a></li>
             <li><a href="{% url 'logout' %}">Log Out</a></li>
             <li><a>Welcome: {{user.username}}</a></li>
             {% else %}
-            <li><a class= "nav navbar-right" href="{% url 'login'%}"><span class="glyphicon glyphicon-user"></span></a></li>
+            <li><a class= "nav navbar-right" href="{% url 'login'%}">Login</a></li>
             {% endif %}
         </ul>
       </div>
