--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -4,10 +4,6 @@
   <form class="post-form" method="POST">
     {% csrf_token %}
     {{form.as_p}}
-    <input type="submit" class="save btn btn-default">Save</input>
+    <input type="submit" class="save btn btn-default" value="Save"/>
   </form>
-
-  <script type="text/javascript">
-      var editor = new MediumEditor('.editable');
-  </script>
 {% endblock %}
